[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/code_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://script_editor.gd" type="Script" id=2]
[ext_resource path="res://run_button.gd" type="Script" id=3]
[ext_resource path="res://resources/theme.tres" type="Theme" id=4]
[ext_resource path="res://main_window.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 32.0
content_margin_right = 32.0
content_margin_top = 24.0
content_margin_bottom = 24.0
bg_color = Color( 0.18375, 0.202519, 0.21, 1 )

[node name="MainWindow" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 5 )

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 640
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
margin_right = 656.0
margin_bottom = 720.0
custom_constants/separation = 0

[node name="ScriptEditor" type="TextEdit" parent="HSplitContainer/VBoxContainer"]
margin_right = 656.0
margin_bottom = 720.0
size_flags_vertical = 3
custom_colors/selection_color = Color( 0, 0.666667, 1, 0.25098 )
custom_colors/current_line_color = Color( 1, 1, 1, 0.0705882 )
custom_constants/line_spacing = 6
custom_fonts/font = ExtResource( 1 )
text = "extends Node

func _ready():
	print(\"Hello world!\")
"
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
fold_gutter = true
highlight_all_occurrences = true
hiding_enabled = true
wrap_enabled = true
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 2 )

[node name="RunButton" type="Button" parent="HSplitContainer/VBoxContainer/ScriptEditor"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = 48.0
grow_horizontal = 0
hint_tooltip = "Shortcut: Ctrl + Enter"
text = "Run"
script = ExtResource( 3 )

[node name="ShareButton" type="Button" parent="HSplitContainer/VBoxContainer/ScriptEditor"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -196.0
margin_top = 15.0
margin_right = -111.0
margin_bottom = 48.0
grow_horizontal = 0
hint_tooltip = "Shortcut: Ctrl + Enter"
text = "Share"

[node name="CopiedTimer" type="Timer" parent="HSplitContainer/VBoxContainer/ScriptEditor"]
one_shot = true

[node name="OutputPanel" type="PanelContainer" parent="HSplitContainer"]
margin_left = 668.0
margin_right = 1280.0
margin_bottom = 720.0
custom_styles/panel = SubResource( 1 )

[node name="ErrorLabel" type="Label" parent="HSplitContainer/OutputPanel"]
margin_left = 32.0
margin_top = 24.0
margin_right = 580.0
margin_bottom = 46.0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0.501961, 0.376471, 1 )
autowrap = true

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer/OutputPanel"]
margin_left = 32.0
margin_top = 24.0
margin_right = 580.0
margin_bottom = 696.0
focus_mode = 2
custom_colors/selection_color = Color( 0, 0.666667, 1, 0.376471 )
custom_fonts/normal_font = ExtResource( 1 )
scroll_following = true
selection_enabled = true

[node name="EngineVersion" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -208.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 42.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HSplitContainer/VBoxContainer/ScriptEditor/RunButton" to="HSplitContainer/VBoxContainer/ScriptEditor" method="_run_button_pressed"]
[connection signal="pressed" from="HSplitContainer/VBoxContainer/ScriptEditor/ShareButton" to="HSplitContainer/VBoxContainer/ScriptEditor" method="_on_ShareButton_pressed"]
[connection signal="timeout" from="HSplitContainer/VBoxContainer/ScriptEditor/CopiedTimer" to="HSplitContainer/VBoxContainer/ScriptEditor" method="_on_CopiedTimer_timeout"]
